Bug 11991 - some python modules fail to resolve dependencies in non-dc build
Summary: some python modules fail to resolve dependencies in non-dc build
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Python (show other bugs)
Version: 4.4.4
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on: 12025 12026
Blocks:
  Show dependency treegraph
 
Reported: 2016-06-23 11:12 UTC by Guenther Deschner
Modified: 2016-08-05 07:44 UTC (History)
5 users (show)

See Also:


Attachments
patch from master for v4-4-test (15.79 KB, patch)
2016-06-23 11:18 UTC, Guenther Deschner
asn: review+
abartlet: review-
Details
patch from master for v4-3-test (15.84 KB, patch)
2016-06-23 11:21 UTC, Guenther Deschner
asn: review+
Details
patch from master for v4-3-test (fixed patch + one followup cherrypick) (30.34 KB, patch)
2016-06-24 13:00 UTC, Guenther Deschner
asn: review+
abartlet: review-
Details
Proposed WIP patch for master (4.26 KB, patch)
2016-07-09 08:11 UTC, Andrew Bartlett
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Guenther Deschner 2016-06-23 11:12:38 UTC

    
Comment 1 Guenther Deschner 2016-06-23 11:16:49 UTC
From https://bugzilla.redhat.com/show_bug.cgi?id=1348899:

"When trying to use the samba python bindings, I fail to import samba.ntacls.
The message I get is "ImportError: No module named xattr_native""
Comment 2 Guenther Deschner 2016-06-23 11:18:52 UTC
Created attachment 12202 [details]
patch from master for v4-4-test
Comment 3 Guenther Deschner 2016-06-23 11:21:49 UTC
Created attachment 12203 [details]
patch from master for v4-3-test
Comment 4 Andreas Schneider 2016-06-23 12:31:48 UTC
Comment on attachment 12202 [details]
patch from master for v4-4-test

LGTM
Comment 5 Andreas Schneider 2016-06-23 12:33:37 UTC
Karolin, please add the packages to the relevant branches. Thanks!
Comment 6 Karolin Seeger 2016-06-24 07:10:32 UTC
(In reply to Andreas Schneider from comment #5)
Pushed to autobuild-v4-[4|3]-test.
Comment 7 Karolin Seeger 2016-06-24 08:06:37 UTC
Patch for 4.3 breaks the build:

[1976/3998] Compiling source4/rpc_server/common/server_info.c
../source4/rpc_server/common/server_info.c:29:37: error: rpc_server/common/share.h: No such file or directory
Waf: Leaving directory `/memdisk/kseeger/a43/b192237/samba/bin'
Build failed:  -> task failed (err #1): 
	{task: cc server_info.c -> server_info_1.o}
make: *** [all] Error 1

Re-assigning to Günther.
Comment 8 Guenther Deschner 2016-06-24 13:00:06 UTC
Created attachment 12206 [details]
patch from master for v4-3-test (fixed patch + one followup cherrypick)
Comment 9 Guenther Deschner 2016-06-27 11:58:51 UTC
Karolin, now the 4.3 patches will work. Sorry for the inconvenience. Please add to 4.3.x
Comment 10 Karolin Seeger 2016-07-04 07:16:16 UTC
(In reply to Guenther Deschner from comment #9)
Thanks, Günther!
Pushed to autobuild-v4-3-test.
Comment 11 Karolin Seeger 2016-07-04 07:16:47 UTC
(In reply to Karolin Seeger from comment #6)
Pushed to v4-4-test.
Comment 12 Karolin Seeger 2016-07-08 07:24:33 UTC
(In reply to Karolin Seeger from comment #11)
Pushed to both branches.
Closing out bug report.

Thanks!
Comment 13 Andrew Bartlett 2016-07-09 05:24:06 UTC
Comment on attachment 12202 [details]
patch from master for v4-4-test

Sadly it appears that this patch is incomplete, and prevents the AD DC operating when built without --enable-developer. 

The issue is that we expect the rpc services built to match the defaults specified in the smb.conf, from which we get the 'dcerpc endpoint services' value.
Comment 14 Andrew Bartlett 2016-07-09 08:11:35 UTC
Created attachment 12265 [details]
Proposed WIP patch for master

This is what needs to be added.  Not proposed yet as I may need to adjust make test to match.

I'll follow up on Monday.
Comment 15 Karolin Seeger 2016-08-02 07:40:35 UTC
(In reply to Andrew Bartlett from comment #14)
Please note that the next 4.4 release is scheduled for August 16 (freeze on August 9). We should either have the fix in the branch until then or revert the first patchset, right?
Comment 16 Andrew Bartlett 2016-08-02 07:56:39 UTC
As long as the patch in 12026 passes autobuild into 4.4 and 4.3 this should all be OK.
Comment 17 Karolin Seeger 2016-08-05 07:44:36 UTC
(In reply to Andrew Bartlett from comment #16)
Patch from bug #12026 has been pushed to both branches.
Closing out bug report.

Thanks!